[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Ubuntu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/SettingsView.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 1 )

[node name="SettingsView" type="VBoxContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -292.0
margin_top = 32.0
margin_right = 292.0
margin_bottom = 688.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 584.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Firing Range"
align = 1
valign = 1

[node name="Blank" type="Label" parent="."]
margin_top = 45.0
margin_right = 584.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )

[node name="Settings" type="Label" parent="."]
margin_top = 75.0
margin_right = 584.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 2 )
text = "Settings"
align = 1
valign = 1

[node name="Sound Volume" type="Label" parent="."]
margin_top = 105.0
margin_right = 584.0
margin_bottom = 119.0
text = "Sound Volume"

[node name="VolumeSlider" type="HSlider" parent="."]
margin_top = 123.0
margin_right = 584.0
margin_bottom = 139.0
value = 70.0

[node name="Blank2" type="Label" parent="."]
margin_top = 143.0
margin_right = 584.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 2 )

[node name="Mouse Sensitivity" type="Label" parent="."]
margin_top = 173.0
margin_right = 584.0
margin_bottom = 187.0
text = "Mouse Sensitivity"

[node name="SensitivitySlider" type="HSlider" parent="."]
margin_top = 191.0
margin_right = 584.0
margin_bottom = 207.0
value = 50.0

[node name="KeyBindContainer" type="VBoxContainer" parent="."]
margin_top = 211.0
margin_right = 584.0
margin_bottom = 211.0
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="value_changed" from="SensitivitySlider" to="." method="_on_SensitivitySlider_value_changed"]
